fixed the alignment and horizontal scroll issue in signup

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,28 +2,25 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 /* FORM PAGES */
-
-
-.signup {
-  text-align:left;
-  margin: 50 auto 5px;
-  padding: 20px 0 20px 0;
-  font-size: 16px;
-  width: 800px;
+html, body { /**Disables  the horizontal scroll by fixing the width**/
+    max-width: 100%;
+    overflow-x: hidden;
 }
-.login {
-  text-align:left;
-  margin: 0 auto 10px;
-  padding: 20px 0 10px 0;
-  font-size: 16px;
-  width: 300px;
+.signup{
+  margin-left: -325px;
+  border-right: thick solid #2c3e50;;
+  
+}
+.login{
+  margin-left:150px;
+
 }
 input[type=text],
 input[type=email],
 input[type=password] {
-  color: #666666;
+  color: #000070;
   width: 100%;
-  border: 1px solid #E6E6E6;
+  border: 3px solid #E6E6E6;
   border-radius: 0px; 
   height: 60px;
   margin: 6px auto;
@@ -34,7 +31,7 @@ input[type=password] {
   color: #FFFFFF;
   font-size: 18px;
   text-transform: uppercase;
-  background: #000080;
+  background: #2c3e50;
   padding: 10px 20px;
   border: 0;
   margin-top: 6px;
